# project-parents

./: .gitignore  .python-version  Dockerfile  db.sqlite3  deploy.py  manage.py  pyproject.toml  requirements.txt
.config/: gunicorn.py  ref.nginx  supervisord.conf
blog/migrations/: 0001_initial.py  0002_delete_post.py
blog/templates/blog/: index.html
mysite/: settings.py  urls.py
static/css/: blog.css
