[tool.poetry]
name = "parents"
version = "0.1.0"
description = ""
authors = ["Hyojin Kwon <raccoonhj33@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.14"
gunicorn = "^20.0.4"
supervisor = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
